fixed header img vertical alignment

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <!-- header element -->
     <header>
 
-        <img style="border: black;" src="img/skull column left.jpg">
+        <img style="border: black; margin-bottom: 80px;" src="img/skull column left.jpg">
 
         <img style="margin: 15px 125px; width: 350px; height: 411px;" src="img/scorpion_avatar.jpg">
 
-        <img style="border: black;" src="img/skull column right.jpg">
+        <img style="border: black; margin-bottom: 80px;" src="img/skull column right.jpg">
 
 
         <h1>SCORPION</h1>
