updated bckgrnd color grad and changed h2 color

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Palette swap -->
         <h2>Palette swap versions of Scorpion</h2>
         <ul>
-            <li>Sub-Zero as the blue ninja</li>
+            <li>Sub Zero as the blue ninja</li>
             <li>Reptile as the green ninja</li>
             <li>Smoke as the gray ninja</li>
             <li>Noob Saibot as the black ninja - <i>fun fact, his name comes from the mirrored version of Tobias Boon, one of the main devs</i></li>
